--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -3,7 +3,7 @@
   <section class="my-2 querySection">
     <div class="row mb-2">
       <div class="col form-inline">
-        <label class="">審核類別</label>
+        <label class="title">審核類別</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
             <option>請選擇</option>
@@ -16,7 +16,7 @@
     </div>
     <div class="row mb-2">
       <div class="col form-inline">
-        <label class="">公告類別</label>
+        <label class="title">公告類別</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
             <option>請選擇</option>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="col form-inline">
-        <label class="">公告單位</label>
+        <label class="title">公告單位</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
             <option>請選擇</option>
@@ -37,7 +37,7 @@
     </div>
     <div class="row mb-2">
       <div class="col form-inline">
-        <label class="">發佈日期</label>
+        <label class="title">發佈日期</label>
         <div class="pl-2 form-inline">
           <div class="datepicker-ctn">
             <input
@@ -73,7 +73,7 @@
         </div>
       </div>
       <div class="col form-inline">
-        <label class="">關鍵字查詢</label>
+        <label class="title">關鍵字查詢</label>
         <div class="pl-2">
           <input type="text" class="form-control" />
         </div>
