--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
-@import '~bootstrap/dist/css/bootstrap.min.css';
+@import "~bootstrap/dist/css/bootstrap.min.css";
+
+.querySection {
+  .form-control {
+    width: 10em;
+  }
+  label {
+    &.title {
+        width: 100px;
+    }
+  }
+}
