--- a/src/app/side-menu/side-menu.component.scss
+++ b/src/app/side-menu/side-menu.component.scss
@@ -6,6 +6,11 @@
     justify-content: center;
     align-items: center;
     justify-content: flex-start;
+    background-color: #f5f6f8;
+    cursor: pointer;
+    &:hover {
+        background-color: white;
+    }
     img {
       width: 32px;
       margin-left: 10px;
@@ -24,8 +29,13 @@
         padding-left: 50px;
         height: 48px;
         color: #676767;
+        cursor: pointer;
         &:hover {
           background-color: #e1f3f9;
+        }
+        a {
+          text-decoration: none;
+          color: grey;
         }
       }
     }
