--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -128,12 +128,12 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">
+            <td scope="row">
               <div class="td-group">
                 <span>一般公告</span>
                 <span>公司LOGO</span>
               </div>
-            </th>
+            </td>
             <td></td>
             <td>待審核</td>
             <td>
@@ -160,12 +160,12 @@
             </td>
           </tr>
           <tr>
-            <th scope="row">
+            <td scope="row">
               <div class="td-group">
                 <span>單位公告</span>
                 <span>稽核單</span>
               </div>
-            </th>
+            </td>
             <td></td>
             <td>待審核</td>
             <td>
