--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -78,7 +78,7 @@
         </thead>
         <tbody>
           <tr>
-            <th scope="row">2021/3/4</th>
+            <td scope="row">2021/3/4</td>
             <td>一般公告</td>
             <td>公司LOGO</td>
             <td>
@@ -108,7 +108,7 @@
             <td>2021/3/3</td>
           </tr>
           <tr>
-            <th scope="row">2021/3/4</th>
+            <td scope="row">2021/3/4</td>
             <td>單位公告</td>
             <td>稽核單</td>
             <td>
