下載專區 檔案下載欄位最多三個

--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -82,27 +82,35 @@
             <td>一般公告</td>
             <td>公司LOGO</td>
             <td>
-              <div class="td-group">
+              <div class="td-group img-desc">
                 <span>LOGO</span>
                 <span>使用說明</span>
                 <span>範例</span>
               </div>
             </td>
-            <td>
-              <img src="/assets/icons/icons8-pdf-48.png" alt="" srcset="" />
-              <img
-                src="/assets/icons/icons8-microsoft-word-48.png"
-                alt=""
-                srcset=""
-              />
-              <img
-                src="/assets/icons/icons8-microsoft-excel-48.png"
-                alt=""
-                srcset=""
-              />
-              <img src="/assets/icons/icons8-png-48.png" alt="" srcset="" />
-              <img src="/assets/icons/icons8-jpg-48.png" alt="" srcset="" />
-              <img src="/assets/icons/icons8-ppt-48.png" alt="" srcset="" />
+            <td class="td-group">
+              <span class="block-span">
+                <img src="/assets/icons/icons8-pdf-48.png" class="file-icon" alt="" srcset="" />
+                <img
+                  src="/assets/icons/icons8-microsoft-word-48.png"
+                  alt=""
+                  srcset=""
+                  class="file-icon"
+                />
+                <img
+                  src="/assets/icons/icons8-microsoft-excel-48.png"
+                  alt=""
+                  srcset=""
+                  class="file-icon"
+                />
+              </span>
+              <span class="block-span">
+                <img src="/assets/icons/icons8-png-48.png" alt="" srcset="" class="file-icon" />
+                <img src="/assets/icons/icons8-jpg-48.png" alt="" srcset="" class="file-icon" />
+              </span>
+              <span class="block-span">
+                <img src="/assets/icons/icons8-ppt-48.png" alt="" srcset="" class="file-icon" />
+              </span>
             </td>
             <td>1.5MB</td>
             <td>2021/3/3</td>
