--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -6,7 +6,6 @@
         <label class="title">審核類別</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
-            <option>請選擇</option>
             <option>發佈審核</option>
             <option>下載審核</option>
           </select>
@@ -45,7 +44,11 @@
               placeholder="起日"
               class="form-control w-100"
               bsDatepicker
-              [bsConfig]="{ adaptivePosition: true }"
+              [bsConfig]="{
+                adaptivePosition: true,
+                dateInputFormat: 'YYYY-MM-DD'
+              }"
+              [bsValue]="bsValueStart"
             />
             <img
               src="/assets/icons/day@2x.png"
@@ -58,10 +61,14 @@
           <div class="datepicker-ctn">
             <input
               type="text"
-              placeholder="起日"
+              placeholder="訖日"
               class="form-control w-100"
               bsDatepicker
-              [bsConfig]="{ adaptivePosition: true }"
+              [bsConfig]="{
+                adaptivePosition: true,
+                dateInputFormat: 'YYYY-MM-DD'
+              }"
+              [bsValue]="bsValueEnd"
             />
             <img
               src="/assets/icons/day@2x.png"
@@ -117,8 +124,6 @@
             <td>
               <div class="td-group">
                 <span>LOGO</span>
-                <span>使用說明</span>
-                <span>範例</span>
               </div>
             </td>
             <td>全員工</td>
@@ -151,7 +156,6 @@
             <td>
               <div class="td-group">
                 <span>稽核單</span>
-                <span>使用說明</span>
               </div>
             </td>
             <td><a href="">中文名字</a></td>
