--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -27,7 +27,7 @@
         <label class="title">公告狀態</label>
         <div class="pl-2">
           <select class="form-control" id="exampleFormControlSelect2">
-            <option>已退回</option>
+            <option>退件</option>
             <option>審核中</option>
             <option>已核准</option>
           </select>
