--- a/src/app/maintain/maintain.component.html
+++ b/src/app/maintain/maintain.component.html
@@ -163,7 +163,7 @@
             <td>V</td>
             <td>
               <img
-                src="/assets/icons/button_preview@2x.png"
+                src="/assets/icons/icon_peo_up.png"
                 class="icon-button"
                 alt=""
                 srcset=""
