--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -323,7 +323,7 @@
           />
         </div>
       </div>
-      <div class="row mb-2">
+      <!-- <div class="row mb-2">
         <div class="col form-inline">
           <label></label>
           <div class="pl-2">
@@ -340,7 +340,7 @@
           </div>
         </div>
         <div class="col form-inline"></div>
-      </div>
+      </div> -->
       <hr class="mt-1 mb-1" />
       <div class="row mb-2">
         <div class="col form-inline">
