--- a/src/app/table-info/table-info.component.html
+++ b/src/app/table-info/table-info.component.html
@@ -34,7 +34,7 @@
               bsDatepicker
               [bsConfig]="{
                 adaptivePosition: true,
-                dateInputFormat: 'YYYY-MM-DD'
+                dateInputFormat: 'YYYY/MM/DD'
               }"
               [bsValue]="bsValueStart"
             />
@@ -54,7 +54,7 @@
               bsDatepicker
               [bsConfig]="{
                 adaptivePosition: true,
-                dateInputFormat: 'YYYY-MM-DD'
+                dateInputFormat: 'YYYY/MM/DD'
               }"
               [bsValue]="bsValueEnd"
             />
