--- a/src/app/download-approval/download-approval.component.html
+++ b/src/app/download-approval/download-approval.component.html
@@ -46,7 +46,7 @@
               bsDatepicker
               [bsConfig]="{
                 adaptivePosition: true,
-                dateInputFormat: 'YYYY-MM-DD'
+                dateInputFormat: 'YYYY/MM/DD'
               }"
               [bsValue]="bsValueStart"
             />
@@ -66,7 +66,7 @@
               bsDatepicker
               [bsConfig]="{
                 adaptivePosition: true,
-                dateInputFormat: 'YYYY-MM-DD'
+                dateInputFormat: 'YYYY/MM/DD'
               }"
               [bsValue]="bsValueEnd"
             />
